visual bug and stop visible/hidden dinging

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -511,7 +511,7 @@ a:visited {
 
 /* big device */
 
-@media only screen and (min-width: 1290px) {
+@media only screen and (min-width: 1280px) {
     #collaborative_text_holder {
         height: 100%;
         width: 100%;
